--- a/requirements.txt
+++ b/requirements.txt
@@ -128,4 +128,4 @@ wrapt==1.11.2
 yarg==0.1.9
 yarl==1.3.0
 zipp==0.5.2
--e git+https://github.com/wzzqq/mytag.git#egg=bustag
+-e git+https://github.com/wzzqq/tag.git#egg=bustag
