--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,12 +3,12 @@ name: Docker Image CI
 on:
   push:
     branches:
-      - 'main1'
+      - 'main'
     tags:
       - 'v*'
   pull_request:
     branches:
-      - 'main1'
+      - 'main'
 
 jobs:
   docker:
