--- a/requirements.txt
+++ b/requirements.txt
@@ -58,9 +58,9 @@ multidict==4.5.2
 nbconvert==5.5.0
 nbformat==4.4.0
 notebook==6.0.1
-numpy==1.19.2
+numpy
 packaging==19.1
-pandas==1.3.5
+pandas
 pandocfilters==1.4.2
 parse==1.12.0
 parso==0.5.1
@@ -91,7 +91,7 @@ qtconsole==4.5.2
 requests==2.22.0
 requests-html==0.10.0
 scikit-learn==1.0.2
-scipy==1.7.3
+scipy
 Send2Trash==1.5.0
 setuptools==59.2.0
 six==1.12.0
