--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,6 +40,7 @@ jobs:
           file: ./Dockerfile
           platforms: |
             linux/amd64
+            linux/arm64
           push: true
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/bustag-z:dev2
